# cangjie_stdx

./: .gitignore  CMakeLists.txt  OAT.xml  Open_Source_Software_Notice.docx  README.OpenSource  README.md  README_OpenHarmony.md  README_zh.md  build.cj  build.py  cangjie-repo.toml  cjpm.toml  cjpm_build.py  downloader.ps1  downloader.sh  package.json
src/: CMakeLists.txt
src/stdx/: CMakeLists.txt  stdx.cj
src/stdx/actors/: CMakeLists.txt  actor_future.cj  actors.cj  mailbox.cj  priority_queue.cj  semaphore.cj
src/stdx/actors/macros/: CMakeLists.txt  actor_macro.cj  exception.cj  macro_errors.cj  macro_option.cj  receiver_macro.cj  utils.cj
src/stdx/aspectCJ/: CMakeLists.txt  aspectCJ.cj
src/stdx/aspectCJ/plugins/: CMakeLists.txt
src/stdx/aspect_cj/: CMakeLists.txt  aspect_cj.cj
src/stdx/aspect_cj/plugins/: CMakeLists.txt
src/stdx/chir/: CMakeLists.txt  GenerateFlatbuffers.cmake  annotation.cj  attribute.cj  aux_data_structure.cj  base.cj  chir_anno.cj  chir_builder.cj  chir_exception.cj  class_def.cj  custom_type_def.cj  debug_location.cj  deserialize.cj  enum_def.cj  expression.cj  extend_def.cj  ir_visitor.cj  package.cj  patch_table.py  serialize.cj  string_const.cj  struct_def.cj  to_string_utils.cj  type.cj  type_visitor.cj  utils.cj  value.cj
src/stdx/chir/to_string_macro/: CMakeLists.txt  macro.cj
src/stdx/chir/utils/: utils.cj
src/stdx/compress/: CMakeLists.txt  tar_gzip.cj
src/stdx/compress/tar/: CMakeLists.txt  encode.cj  extension_func.cj  gnu_tar_entry.cj  native.cj  parse.cj  pax_tar_entry.cj  posix_tar_entry.cj  tar.cj  tar_entry.cj  tar_entry_format.cj  tar_entry_type.cj  tar_exception.cj  tar_header.cj  tar_header_buffer.cj  tar_reader.cj  tar_writer.cj  ustar_tar_entry.cj  v7_tar_entry.cj
src/stdx/compress/zlib/: CMakeLists.txt  deflate.cj  inflate.cj  zlib_stream.cj
src/stdx/crypto/: CMakeLists.txt
src/stdx/crypto/common/: certificate.cj  crypto_kit.cj  der_blob.cj  keys.cj  pem.cj  pem_entry.cj  pem_formatter.cj  pem_parser.cj  random_generator.cj  utils.cj
src/stdx/crypto/crypto/: CMakeLists.txt  secure_random.cj  sm4.cj
src/stdx/crypto/digest/: CMakeLists.txt  hmac.cj  md5.cj  native.cj  sha1.cj  sha224.cj  sha256.cj  sha384.cj  sha512.cj  sm3.cj
src/stdx/crypto/keys/: CMakeLists.txt  ecdsa.cj  keys.cj  native.cj  rsa.cj  sm2.cj
src/stdx/crypto/kit/: default_crypto_kit.cj
src/stdx/crypto/x509/: CMakeLists.txt  certificate.cj  certificate_info.cj  csr.cj  csr_blob.cj  der.cj  der_cert.cj  der_parser.cj  der_principal.cj  key_info.cj  keys.cj  native.cj  oid_principals.cj  serial_number.cj  signature.cj  utils.cj
src/stdx/dynamicLoader/: CMakeLists.txt  declareFunction.inc  defineFunction.inc  opensslSymbols.c  opensslSymbols.h
src/stdx/effect/: CMakeLists.txt  common.cj  effect.cj  immediate.cj
src/stdx/encoding/: CMakeLists.txt
src/stdx/encoding/base64/: CMakeLists.txt  base64_string.cj
src/stdx/encoding/hex/: CMakeLists.txt  hex_string.cj
src/stdx/encoding/json/: CMakeLists.txt  json_object.cj  json_value.cj  native.cj  to_json.cj  write_buffer.cj
src/stdx/encoding/url/: CMakeLists.txt  form.cj  url.cj  url_util.cj
src/stdx/fuzz/: CMakeLists.txt  callback.cj  data_provider.cj  fuzz.cj  fuzzer.cj  fz_exception.cj  native.cj  oom_handler.cj  report.cj
src/stdx/fuzz/fuzz/: CMakeLists.txt  callback.cj  data_provider.cj  fuzzer.cj  fz_exception.cj  native.cj  oom_handler.cj  report.cj
src/stdx/fuzz/native/: CMakeLists.txt  cj_sancov_standard.c  cj_sancov_standard.h  fake_stacktrace_printer.c  utf8_fix.c  utf8_fix.h
src/stdx/log/: CMakeLists.txt  log_level.cj  logger.cj  logger_holder.cj  noop_logger.cj
src/stdx/logger/: CMakeLists.txt  common_logger.cj  str_ext.cj
src/stdx/net/: CMakeLists.txt
src/stdx/net/http/: CMakeLists.txt  buffered_conn.cj  client.cj  collection_extend.cj  collection_multi_level_queue.cj  collection_queue.cj  constants.cj  cookie_jar.cj  coroutine_pool.cj  exception.cj  frame.cj  hpack_decoder.cj  hpack_encoder.cj  hpack_header_table.cj  hpack_quick_huffman.cj  http_body.cj  http_client1_1.cj  http_client2_0.cj  http_engine_conn.cj  http_handler.cj  http_header.cj  http_request.cj  http_request_context.cj  http_response.cj  http_server1_1.cj  http_server2_0.cj  pool.cj  protocol_service.cj  server.cj  str.cj  stream_client.cj  stream_server2_0.cj  transport.cj  utils.cj  utils2_0.cj  websocket.cj  websocket_frame.cj  websocket_status_code.cj
src/stdx/net/tls/: alpn.cj  bridge.cj  buffer.cj  certificate.cj  cipher_suite.cj  context.cj  default_tls_kit.cj  handshake.cj  lazy.cj  native.cj  sessions.cj  stream.cj  tls_client_config.cj  tls_config.cj  tls_server_config.cj  tls_signature.cj  tls_socket.cj  tls_socket_state.cj  tls_utils.cj
src/stdx/plugin/: CMakeLists.txt  register.cj
src/stdx/plugin/manager/: CMakeLists.txt  base.cj  execute.cj  manager.cj
src/stdx/serialization/: CMakeLists.txt
src/stdx/serialization/serialization/: CMakeLists.txt  data_model.cj  serializable.cj
src/stdx/string_intern/: CMakeLists.txt  base_double_linked_list_memory_cache.cj  base_memory_cache.cj  cache.cj  cache_eviction_type.cj  cache_proxy.cj  concurrent_skiping_link_list.cj  fifo_memory_cache.cj  i_cache.cj  i_cache_config.cj  i_cache_obj.cj  i_cache_obj_attr.cj  i_link_list.cj  intern_string.cj  intern_string_pool.cj  lfu_memory_cache.cj  lru_memory_cache.cj  wyrand.cj
src/stdx/syntax/: ast_rewriter.cj  ast_visitor.cj  basic.cj  code_position.cj  decl.cj  expr.cj  ffi.cj  macro.cj  offset.cj  package.cj  parser.cj  parser_impl.cj  pattern.cj  prop_info.cj  public_parse_apis.cj  rewriter.cj  syntax_node_impl.cj  syntax_node_impl_creator.cj  syntax_node_impl_translator.cj  syntax_node_kind.cj  syntax_tree_node.cj  type_annotation.cj  visitor.cj
src/stdx/syntax/native/: AstApi.cpp  AstApi.h  CMakeLists.txt  ExprWriter.cpp  NodeFormat.fbs  NodeWriter.cpp  NodeWriter.h  ParserSyntax.cpp  ParserSyntax.h  ParserSyntaxImpl.cpp  ParserSyntaxImpl.h  TokenWriter.cpp  TokenWriter.h
src/stdx/unittest/: CMakeLists.txt
src/stdx/unittest/data/: CMakeLists.txt  csv_strategy.cj
(+307 files in other folders)
